--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,19 +2,15 @@
 <html>
   <head>
     <title>Meshiterro</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-      <header>
+   <header>
     <% if user_signed_in? %>
       <li>
-    <%= link_to '投稿フォーム', new_post_image_path %>
+      <%= link_to '投稿フォーム', new_post_image_path %>
+      </li>
+      <li>
+      <%= link_to 'マイページ', user_path(current_user.id) %>
       </li>
       <li>
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
@@ -27,7 +23,7 @@
         <%= link_to "ログイン", new_user_session_path %>
       </li>
     <% end %>
-      </header>
-    <%= yield %>
+    </header>
+     <%= yield %>
   </body>
 </html>
