--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -1,2 +1,35 @@
-<h1>PostImages#show</h1>
-<p>Find me in app/views/post_images/show.html.erb</p>
+<div>
+  <%= image_tag XXX.get_image %>
+  <p>ショップ名：<%= XXX.shop_name %></p>
+  <p>説明：<%= XXX.caption %></p>
+  <p>投稿ユーザー画像：<%= image_tag @post_image.user.get_profile_image(100,100) %></p>
+  <p>投稿ユーザー画像：<%= image_tag 'sample-author1.jpg' %></p>
+  <p>ユーザーネーム：<%= XXX.user.name %></p>
+  <p>投稿日：<%= XXX.created_at.strftime('%Y/%m/%d') %></p>
+    <% if post_comment.user == current_user %>
+      <%= link_to "削除", post_image_post_comment_path(post_comment.post_image, post_comment), method: :delete %>
+    <% end %>
+  <% if @post_image.user == current_user %>
+   <%= link_to "削除", post_image_path(@post_image), method: :delete %>
+  <% end %>
+    <% if @post_image.favorited_by?(current_user) %>
+    <p>
+      <%= link_to post_image_favorites_path(@post_image), method: :delete do %>
+        ♥<%= @post_image.favorites.count %> いいね
+      <% end %>
+    </p>
+    <% else %>
+    <p>
+      <%= link_to post_image_favorites_path(@post_image), method: :post do %>
+        ♡<%= @post_image.favorites.count %> いいね
+      <% end %>
+    </p>
+  <% end %>
+</div>
+
+<div>
+  <%= form_with model:[@post_image, @post_comment] do |f| %>
+    <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
+    <%= f.submit "送信する" %>
+  <% end %>
+</div>
